tests/negative/typecheck/immutable-misc.orng
fn main() -> Int
    0[0] = 4
    0